[gd_scene load_steps=5 format=3 uid="uid://jqlufu421sdu"]

[ext_resource type="Texture2D" uid="uid://b2laohcrirtl5" path="res://测试/旧测试/小游戏_太空侵略者/原始文件/资产/enemy.png" id="1_lee86"]
[ext_resource type="Script" uid="uid://ce06sedlm2otq" path="res://测试/旧测试/小游戏_太空侵略者/原始文件/敌人.gd" id="1_vmsyu"]
[ext_resource type="PackedScene" uid="uid://qycp5rpiko8a" path="res://测试/旧测试/小游戏_太空侵略者/原始文件/子弹/敌人子弹.tscn" id="2_2guwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o76wt"]
size = Vector2(14, 11)

[node name="敌人" type="Node2D"]
script = ExtResource("1_vmsyu")
enemy_bullet_scene = ExtResource("2_2guwl")

[node name="Enemy" type="Sprite2D" parent="."]
texture = ExtResource("1_lee86")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_o76wt")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
